--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
         <script>
         const titleBox = document.querySelector('.btn-select');
         const selectList = document.querySelector('.list-member');
+        const list = document.querySelectorAll('li');
 
         titleBox.addEventListener('click', ()=> {
             titleBox.classList.toggle('on');
